--- a/Views/Products/Index.cshtml
+++ b/Views/Products/Index.cshtml
@@ -8,20 +8,12 @@
 <div class="text-center">
     <h4 class="display-5">Product</h4>
 </div>
-<fieldset class="scheduler-border">
-  <div class="container-flow">
-   <div class="row  p-1">
-        <div class="col-lg-8 form-group">
-            <input type="text" style="font-size:10px;" class="form-control" placeholder="Product Name:" aria-label="Product Name:" aria-describedby="basic-addon2" id="description">
-        </div>
-        <div class="col-lg-3"></div>
-        <div class="col-lg-1 form-group text-right">
-            <button class="btn btn-outline-secondary" style="font-size:10px;" type="button">Search</button>
-        </div>
-        </div>
-    </div>
-</fieldset>
-
+<body>
+    <div class="searchInput2"> 
+      <label for="description" class="Label" >Product Name:</label>
+      <input type="text" class="input2" id="description" name="description"/>
+  </div>
+</body>
 <table id="product"></table>
 <div id="jqGridPager"></div>
 
