--- a/Views/SaOutbound/Index.cshtml
+++ b/Views/SaOutbound/Index.cshtml
@@ -163,7 +163,7 @@
                errorTextFormat: function (data) {
                       return 'Error: ' + data.responseText
                    },
-                   url: 'SaInternalTransfer/Add'
+                   url: 'saOutbound/Add'
                });
                
        });
