--- a/Views/Supplier/Index.cshtml
+++ b/Views/Supplier/Index.cshtml
@@ -8,20 +8,12 @@
 <div class="text-center">
     <h4 class="display-5">Maintain Suppliers</h4>
 </div>
-<fieldset class="scheduler-border">
-  <div class="container-flow">
-   <div class="row  p-1">
-        <div class="col-lg-8 form-group">
-           <input type="text"  style="font-size:10px;" class="form-control" placeholder="Supplier Name:" aria-label="Supplier Name:" aria-describedby="basic-addon2" id="supplierName">
-        </div>
-        <div class="col-lg-3"></div>
-        <div class="col-lg-1 form-group text-right">
-            <button class="btn btn-outline-secondary"  style="font-size:10px;" type="button">Search</button>
-        </div>
-   </div>
- </div>
-</fieldset>
-
+<body>
+    <div class="searchInput2"> 
+      <label for="supplierName" class="Label" >Supplier Name:</label>
+      <input type="text" class="input2" id="supplierName" name="supplierName"/>
+  </div>
+</body>
 <table id="supplier"></table>
 <div id="jqGridPager"></div>
 
