--- a/Views/SaDamageRecoup/Index.cshtml
+++ b/Views/SaDamageRecoup/Index.cshtml
@@ -47,7 +47,7 @@
     var name;
     $(document).ready(function() {
        $("#saDamageRecoup").jqGrid({
-               url: 'InvAdj/GetAll',
+               url: 'SaDamageRecoup/GetAll',
                mtype: "GET",
                guiStyle: "bootstrap",
                iconSet: "fontAwesome",
