--- a/Views/CustomerSummary/Index.cshtml
+++ b/Views/CustomerSummary/Index.cshtml
@@ -30,7 +30,7 @@
 <fieldset class="scheduler-border">
  <div class="mb-3 row">
     <div class="col-lg-12">
-          <button class="btn btn-secondary btn-lg btn-block" style="font-size:12px;" id="newPage" type="button"> New Page </button>  
+          <button class="btn btn-secondary btn-lg btn-block" style="font-size:12px;" id="search" type="button"> Search </button>  
     </div>
  </div>
 </fieldset>
