-cleaning up looks on screens

--- a/Views/CustomerOrder/Index.cshtml
+++ b/Views/CustomerOrder/Index.cshtml
@@ -23,12 +23,12 @@
   </div>
   <div class="searchDropdown"> 
       <label for="customer"  class="Label">Customer:</label>
-      <select class="form-control dropDownInput" id="customer" name="customer"></select> 
+      <select class="form-control dropDownInput" id="customer" name="Customer"></select> 
   </div>
   <div></div>
   <div class="searchDropdown"> 
       <label for="carrier"  class="Label">Carrier:</label>
-      <select class="form-control dropDownInput" id="carrier" name="carrier"></select> 
+      <select class="form-control dropDownInput" id="carrier" name="Carrier"></select> 
   </div>
   <div class="searchInput">
          <label class="Label" for="specialInstructions">Special Notes:</label>
@@ -43,7 +43,7 @@
          <input type="text" class="input" id="driver"/>
     </div>
     <div class="searchInput">
-         <label class="Label" for="dsSlipNumber">Ds Slip Number:</label>
+         <label class="Label" for="dsSlipNumber">DS Slip Number:</label>
          <input type="text" class="input" id="dsSlipNumber"/>
     </div>
 </body>
@@ -106,8 +106,8 @@
                     } });   
                     }
                    }},
-                   { label: 'Product ID(Sku)',name: 'productSku',fixed:true,width:120,edittype:'text', editoptions: {readonly: 'readonly'}},
-                   { label: 'Stoc Qty',name: 'stockQty',fixed:true,width:100, editable: true,edittype:'text',editrules: {number:true}},
+                   { label: 'Product ID(SKU)',name: 'productSku',fixed:true,width:120,edittype:'text', editoptions: {readonly: 'readonly'}},
+                   { label: 'Stock Qty',name: 'stockQty',fixed:true,width:100, editable: true,edittype:'text',editrules: {number:true}},
                    { label: 'Qty Ordered',name: 'qtyOrdered',fixed:true,width:100, editable: true,edittype:'text',editrules: {number:true}},
                    { label: 'Qty Fulfilled',name: 'qtyFulfilled',fixed:true,width:100, editable: true,edittype:'text',editrules: {number:true}},
                    { label: 'Notes',name: 'notes', editable: true,fixed:true,width:450,edittype:'text'}
