--- a/Views/FulfillSales/Index.cshtml
+++ b/Views/FulfillSales/Index.cshtml
@@ -23,7 +23,7 @@
           <select class="form-control dropDownInput" id="carrierDropdown" name="carrierDropdown"></select> 
     </div>
     <div class="searchDropdown"> 
-          <label for="orderSourceDropdown"  class="Label">order Source:</label>
+          <label for="orderSourceDropdown"  class="Label">Order Source:</label>
           <select class="form-control dropDownInput" id="orderSourceDropdown" name="orderSourceDropdown"></select> 
     </div>
     <div class="checkbox">
@@ -31,6 +31,7 @@
                 <input id="PendingCheckbox"type="checkbox"  class="checkboxInput" value="PendingCheckbox">
                 </label> 
         </div>
+    <div class="Gap2"></div>
     <div class="checkbox">
                 <label class="Label">Fulfilled:
                 <input id="FulfilledCheckbox"type="checkbox" class="checkboxInput" value="FulfilledCheckbox">
