--- a/Views/InvTxSummary/Index.cshtml
+++ b/Views/InvTxSummary/Index.cshtml
@@ -74,7 +74,7 @@
                     },
                    { label: 'Inventory Tx Detail Id',name: 'inventoryTxDetailId', editable: true,hidden:true,editoptions: { readonly: 'readonly'},key: true},
                    { label: 'Transaction Type',name: 'inventoryTxTypeId',width:150,fixed:true,formatter:"select",editoptions: {readonly: 'readonly',value: getInvTxType()}},
-                   { label: 'Sa Code',name: 'saCode',width:100,fixed:true,editoptions: { readonly: 'readonly'}},
+                   { label: 'SA Code',name: 'saCode',width:100,fixed:true,editoptions: { readonly: 'readonly'}},
                    { label: 'Date',name: 'date',fixed:true,width:150, edittype:"text",editoptions: { readonly: 'readonly'}},
                    { label: 'Notes',name: 'comments',fixed:true,width:658, editable: true, edittype:"text",}
 
