--- a/Views/SaStockReceived/Index.cshtml
+++ b/Views/SaStockReceived/Index.cshtml
@@ -115,7 +115,7 @@
                    } });   
                    }  }},
                    { label: 'Product Sku',name: 'productSku',fixed:true,width:100,editable: true, edittype:"text", editoptions: {readonly: 'readonly'}},
-                   { label: 'Adj Amount (+/-)',name: 'amount',fixed:true, width:80,editable: true, edittype:"text"},
+                   { label: 'ADJ Amount (+/-)',name: 'amount',fixed:true, width:80,editable: true, edittype:"text"},
                    { label: 'Notes',name: 'comments',fixed:true,width:650, editable: true, edittype:"text"}
 
                  ], 
